
2019-11-20  Ron Norman <rjn@inglenet.com>

	* common.h,fileio.c,fextfh.c: Added more file format to FCD3
	        and check/set the value in cob_file
			so the COBOL program can change file format via the FCD
	* fileio.c: Tidy up Variable Sequential file processing code
	* fisam.c: Fix coding error related to status 21 on WRITE

2019-11-18  Ron Norman <rjn@inglenet.com>

	* common.h,fileio.c,fextfh.c,fbdb.c: Updates to support 
	        SET ... TO ADDRESS OF FH--FCD OF file
	        SET ... TO ADDRESS OF FH--KEYDEF OF file

2019-11-14  Ron Norman <rjn@inglenet.com>

	* common.c: Fix for display of runtime options
	* fileio.c: If bad data in LINE SEQUENTIAL file cause error status 71
	            instead of 34

2019-11-14  Ron Norman <rjn@inglenet.com>

	* coblocal.h: 
	* common.c: Add runtime options COB_FILE_DICTIONARY &
				COB_FILE_DICTIONARY_PATH
	* fileio.h: 
	* fileio.c: Clean up of code to write/read file format information
	            default is 'asgname.dd'
				Support for COB_FILE_DICTIONARY_PATH is not implemented

2019-10-31  Ron Norman <rjn@inglenet.com>

	* fisam.c: Sets record size when doing OPEN INPUT
	* fileio.c: More work on handing file formats being
	         defined via the IO_asgname

2019-10-29  Ron Norman <rjn@inglenet.com>

	* fileio.c: Checks for filetype_OPTIONS (eg. IX, SQ, RL)
	         and sets options defined
			 If no filetype_OPTIONS then it checks for IO_OPTIONS
			 Then it checks IO_filename for options

			 Implement support for an option of format=auto which
			 indicates fileio should assign the correct INDEXED file
			 handler based on the existing file format

2019-10-26  Ron Norman <rjn@inglenet.com>

	* fileio.c: work on handling file definition parameters in IO_filename
	          RELATIVE file at end-of-file now returns status 10 
			  when ACCESS SEQUENTIAL, otherwise status 23

2019-10-25  Ron Norman <rjn@inglenet.com>

	* fileio.c: split read/write dictionary routines for future uses