@@ -1460,7 +1460,8 @@ typedef struct __cob_file {
 	unsigned int		flag_redef:1;		/* File format has been redefined */
 	unsigned int		flag_auto_type:1;	/* Peek at file for File format */
 	unsigned int		flag_set_type:1;	/* File type/format set via IO_asgname */
-	unsigned int		unused_bits:25;
+	unsigned int		flag_set_isam:1;	/* INDEXED type/format set via IO_asgname */
+	unsigned int		unused_bits:24;
 
 	cob_field		*last_key;		/* Last field used as 'key' for I/O */
 	unsigned char		last_operation;		/* Most recent I/O operation */
